...
    }
  }
  
  @ViewBuilder
  var editingView: some View {
    VStack {
      TextField("Title (optional)", text: $viewModel.title)
        .font(.title)
        .bold()
        .focused($focusedField, equals: .title)
        .padding(.top)
      
      #if os(iOS)
...
                }
                if viewModel.shouldDismissOnDone {
                  dismiss()
                }
              },
              label: {
                Text("Done")
                  .bold()
                  .help("Done")
              }
            )
            .disabled(!viewModel.shouldEnableSave)
          }
...
