...
      }
    }
  }
  
  var navigationTitle: String {
    switch kind {
    case .new: return "Add thought"
    case .existing:
      return state == .editing ? "" : thought!.title
    }
  }
  
  var shouldDismissOnDone: Bool {
...
